--- a/scss/bones/_bones.scss
+++ b/scss/bones/_bones.scss
@@ -194,7 +194,7 @@
 
 /* BEGIN SmartGravity MAIN CONTENT */
 .sg-content {
-  padding: 3rem 0.9375rem;
+  padding: 3rem 0;
   @include clearfix;
 }
 .sg-blog {
@@ -206,6 +206,14 @@
 }
 .list-item {
   margin-bottom: 2.5rem;
+}
+@include breakpoint(small only) {
+  #listing, #item {
+    &.column, &.columns {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
 }
 .blog-header-image {
   background-size: cover;
@@ -449,33 +457,33 @@ img.sg-align {
   }
 }
 .sg-spacer-small .sg-content {
-  padding: 1rem 0.9375rem;
+  padding: 1rem 0;
   .off-canvas & {
-    padding: 1rem 0.9375rem;
+    padding: 1rem 0;
   }
 }
 .sg-spacer-medium .sg-content {
-  padding: 2rem 0.9375rem;
+  padding: 2rem 0;
   .off-canvas & {
-    padding: 2rem 0.9375rem;
+    padding: 2rem 0;
   }
 }
 .sg-spacer-large .sg-content {
-  padding: 5rem 0.9375rem;
+  padding: 5rem 0;
   .off-canvas & {
-    padding: 5rem 0.9375rem;
+    padding: 5rem 0;
   }
 }
 .sg-spacer-xlarge .sg-content {
-  padding: 7rem 0.9375rem;
+  padding: 7rem 0;
   .off-canvas & {
-    padding: 7rem 0.9375rem;
+    padding: 7rem 0;
   }
 }
 .sg-spacer-xxlarge .sg-content {
-  padding: 9rem 0.9375rem;
+  padding: 9rem 0;
   .off-canvas & {
-    padding: 9rem 0.9375rem;
+    padding: 9rem 0;
   }
 }
 /* END SmartGravity UTILITIES */
